--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,6 @@ aux_links:
 # FOOTER
 # ==============================
 footer_content: |
-  © 2025 <strong>Aetheria Sanctum</strong> • Dr. Garcias Alex • Todos os direitos reservados.<br>
+  © 2025 <strong>Aetheria Sanctum</strong> • Dr. Alex Garcias • Todos os direitos reservados.<br>
   <a href="/termos">Termos de Uso</a> • <a href="/privacidade">Privacidade</a> • 
   <a href="https://github.com/XDATCube/aetheria-sanctum">GitHub</a>
