--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,6 +15,13 @@ aux_links:
   "Fórum Soberano":
     - "https://github.com/XDATCube/aetheria-sanctum/discussions"
 
+# === SUPORTE A EQUAÇÕES MATEMÁTICAS (LaTeX) ===
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+  input: GFM
+
 # ==============================
 # FOOTER
 # ==============================
